Fixed #424 - Check for WARNING about Java agent