@@ -228,6 +228,27 @@
           </execution>
         </executions>
       </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <configuration>
+          <argLine>
+            @{argLine}
+            -XX:+EnableDynamicAgentLoading
+          </argLine>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-failsafe-plugin</artifactId>
+        <configuration>
+          <argLine>
+            @{argLine}
+            -XX:+EnableDynamicAgentLoading
+          </argLine>
+        </configuration>
+      </plugin>
+
     </plugins>
   </build>
 
